tests/e2e/not_allowed/single_quotes.error
Error: syntax error in story at line 1, column 5

1|    s = 'string'
          ^^^^^^^^

E0129: Single quotes are not allowed.
